fix: Icons clipping

--- a/packages/uhk-web/src/styles/uhk-icons/uhk-icon.scss
+++ b/packages/uhk-web/src/styles/uhk-icons/uhk-icon.scss
@@ -4,7 +4,7 @@
 
 .uhk-icon {
     display: inline-block;
-    width: 1em;
+    width: 1.2em;
     height: 1em;
     background-size: auto 100%;
     vertical-align: text-bottom;
